--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ header{
   max-width: 100%;
   width:40px;
   height: auto;
+  margin-left: 50px;
 }
 
 .navbar {
@@ -65,10 +66,10 @@ header{
   position: relative;
 }
 .navbar a{
-  font-size: 33px;
+  font-size: 25px;
   color: var(--text-color);
   font-weight: 500;
-  padding: 10px 27px;
+  padding: 10px 18.8px;
   color: #F6F2E6;
   text-shadow:
   -1px -1px 0 #000,
@@ -110,8 +111,9 @@ header{
 
 footer {
   padding-bottom: 50px;
+  padding-top: 50px;
   text-align: center;
-  line-height: 45px;
+  line-height: 30px;
   background-color: #FFFDF9;
 }
 .footer-chat {
@@ -134,7 +136,8 @@ footer {
   margin: 20px 0px 0px 20px;
   font-size: 35px;
   line-height: 1;
-  font-weight: 500;
+  font-weight: 300;
+  font-family: 'Taviraj', serif;
 }
 .home-text h5{
   margin: 15px 0px 25px 24px;
@@ -238,19 +241,21 @@ footer {
   border-top: none;
 }
 .experience-company {
-  font-size: 35px;
+  font-size: 30px;
   color: #505050;
   font-weight: 400;
   width: 50%;
+  padding-bottom: 10px;
 }
 .experience-subheading {
   font-size: 20px;
   font-weight: 100;
   color: #878787;
   width: 50%;
+  padding-bottom: 10px;
 }
 .experience-description {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 200;
   color: #878787;
   width: 50%;
@@ -356,6 +361,10 @@ footer {
   align-content: left;
 }
 
+.about-text {
+  padding: 150px;
+}
+
 #hello{
   float: left;
   margin-right: 50px;
@@ -365,13 +374,16 @@ footer {
 }
 
 .about-text h3{
-  font-size: 40px;
-  font-weight: 600;
+  font-size: 30px;
+  font-weight: 500;
+  font-family: 'Taviraj';
+
 }
 .about-text p{
-  font-size: 23px;
+  font-size: 20px;
   color: black;
   font-weight: 300;
+  font-style: normal;
 }
 .about-text b{
   font-weight: 500;
@@ -398,12 +410,11 @@ footer {
   font-size: 85px;
   fill: #D08085;
   font-weight: 700;
-  letter-spacing: 6px;
 }
 
 .about {
   position: absolute;
-  padding-top: 140px;
+  padding-top: 50px;
   width: 100%;
 }
 
@@ -456,7 +467,7 @@ span.active{
   padding-bottom: 50px;
 }
 
-.investigation {
+#investigation {
   display: flex;
   flex-shrink: 0;
   padding: 0 4px 4px 4px;
@@ -471,6 +482,7 @@ span.active{
 .investigation-img{
   min-height: 50px;
   min-width: 50px;
+  width: 
   padding-top: 15px;
   padding-bottom: 15px;
   object-fit: cover;
@@ -503,7 +515,7 @@ span.active{
   flex: 25%;
 }
 
-.oli {
+#oli {
   display: flex;
   flex-shrink: 0;
   padding: 0 4px 4px 4px;
@@ -528,7 +540,7 @@ span.active{
   color: #878787;
 }
 
-.surreal {
+#surreal {
   display: flex;
   flex-shrink: 0;
   padding: 0 4px 4px 4px;
@@ -593,7 +605,7 @@ span.active{
   overflow: hidden;
 }
 
-.multimedia {
+#multimedia {
   display: flex;
   flex-shrink: 0;
   padding: 0 4px 4px 4px;
@@ -775,10 +787,7 @@ span.active{
 }
 
 #vis80 p {
-  font-size: 40px;
-  color: #878787;
-  font-weight: 300;
-  padding-left: 30px;
+
 }
 
 #vis80 b {
@@ -815,4 +824,24 @@ span.active{
   width: 15%;
   padding: 10px;
   max-width: 300px;
+}
+
+#dsgn1 p {
+  font-size: 40px;
+  color: #878787;
+  font-weight: 300;
+  padding-left: 30px;
+}
+
+#dsgn1 b {
+  font-size: 40px;
+  color: #878787;
+  font-weight: 500;
+}
+
+.play-sections>div  {
+  display:block;
+}
+.play-sections>div.shown {
+  display:block;
 }
