--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ header{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #F6F2E6;
+  background: #FFFDF9;
   padding: 1%;
   transition: .3s;
   box-shadow: 0px 0px 10px rgb(0 0 0 /10%);
@@ -70,7 +70,7 @@ header{
   color: var(--text-color);
   font-weight: 500;
   padding: 10px 18.8px;
-  color: #F6F2E6;
+  color: #FFFDF9;
   text-shadow:
   -1px -1px 0 #000,
   1px -1px 0 #000,
@@ -361,81 +361,6 @@ footer {
   align-content: left;
 }
 
-.about-text {
-  padding: 150px;
-}
-
-#hello{
-  float: left;
-  margin-right: 50px;
-  max-width: 100%;
-  width:250px;
-  height: auto;
-}
-
-.about-text h3{
-  font-size: 30px;
-  font-weight: 500;
-  font-family: 'Taviraj';
-
-}
-.about-text p{
-  font-size: 20px;
-  color: black;
-  font-weight: 300;
-  font-style: normal;
-}
-.about-text b{
-  font-weight: 500;
-}
-.green-highlight {
-  background-color: #E1E2C4;
-  color: black;
-}
-
-
-.work-text {
-  font-size: 85px;
-  fill: tan;
-  font-weight: 700;
-  letter-spacing: 6px;
-}
-.play-text {
-  font-size: 85px;
-  fill: #D08085;
-  font-weight: 700;
-  letter-spacing: 6px;
-}
-.about-text {
-  font-size: 85px;
-  fill: #D08085;
-  font-weight: 700;
-}
-
-.about {
-  position: absolute;
-  padding-top: 50px;
-  width: 100%;
-}
-
-#folder {
-  width: 100%;
-  height: auto;
-}
-
-.about .ui_ux {
-  position: absolute;
-  top: 12.5%;
-  left: 26%;
-  background-color: Transparent;
-  color: #505050;
-  font-size: 30px;
-  font-weight: 500;
-  letter-spacing: 12px;
-  padding: 12px 24px;
-  border: none;
-  cursor: pointer;
-}
 
 /* Play Page Styles */
 #play {
@@ -443,7 +368,7 @@ footer {
 }
 .play-nav {
   text-align: center;
-  padding-top: 250px;
+  padding-top: 200px;
   width: 100%;
   margin-bottom: 75px;
 }
@@ -482,7 +407,7 @@ span.active{
 .investigation-img{
   min-height: 50px;
   min-width: 50px;
-  width: 
+  width: 20%;
   padding-top: 15px;
   padding-bottom: 15px;
   object-fit: cover;
@@ -787,7 +712,9 @@ span.active{
 }
 
 #vis80 p {
-
+  font-size: 40px;
+  color: #878787;
+  font-weight: 300;
 }
 
 #vis80 b {
@@ -840,7 +767,7 @@ span.active{
 }
 
 .play-sections>div  {
-  display:block;
+  display:none;
 }
 .play-sections>div.shown {
   display:block;
