--- a/css/zoom-style.css
+++ b/css/zoom-style.css
@@ -53,11 +53,11 @@ header{
   position: relative;
 }
 .navbar a{
-  font-size: 33px;
+  font-size: 25px;
   color: var(--text-color);
   font-weight: 500;
-  padding: 10px 27px;
-  color: #F6F2E6;
+  padding: 10px 18.8px;
+  color: #FFFDF9;
   text-shadow:
   -1px -1px 0 #000,
   1px -1px 0 #000,
