--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   list-style: none;
   text-decoration: none;
   scroll-behavior: smooth;
-  font-family: 'Poppins', sans-serif;
+
 
 }
 
@@ -77,6 +77,7 @@ header{
   -1px 1px 0 #000,
   1px 1px 0 #000;
   letter-spacing: .1rem;
+  font-family: 'Poppins', sans-serif;
 }
 .navbar a::after{
   content: '';
@@ -119,11 +120,13 @@ footer {
 .footer-chat {
   font-size: 22px;
   font-weight: 500;
+  font-family: 'Poppins', sans-serif;
 }
 .footer-name {
   font-size: 17px;
   font-weight: 300;
   color: #D6D0C3;
+  font-family: 'Poppins', sans-serif;
 }
 .home-text {
   margin: auto;
@@ -145,18 +148,22 @@ footer {
   line-height: 1;
   font-weight: 500;
   color: #CFC9B7;
+  font-family: 'Poppins', sans-serif;
+  padding-top: 12px;
 }
 .home-text h3{
   margin-bottom: 50px;
   font-size: 35px;
   font-weight: 500;
   line-height: 1.5;
+  font-family: 'Poppins', sans-serif;
 }
 .home-text h4{
   margin: 0px 0px 0px 20px;
   font-size: 35px;
   font-weight: 500;
   line-height: 1.5;
+  font-family: 'Poppins', sans-serif;
 }
 .image{
   margin:auto;
@@ -199,6 +206,7 @@ footer {
 #work-scroll-text {
   text-align: center;
   font-size: 25px;
+  font-family: 'Poppins', sans-serif;
 }
 
 .ui-top {
@@ -232,34 +240,34 @@ footer {
   margin:auto;
   padding-top: 50px;
   padding-bottom: 50px;
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
-  grid-column-gap: 55px;
-  grid-row-gap: 100px;
-  border-radius: 0px 0px 40px 40px;
-  border-top: none;
+}
+.exp {
+  display: flex;
+  padding-bottom: 20px;
 }
 .experience-company {
   font-size: 30px;
   color: #505050;
   font-weight: 400;
-  width: 50%;
+  width: 70%;
   padding-bottom: 10px;
+  font-family: 'Poppins', sans-serif;
 }
 .experience-subheading {
   font-size: 20px;
   font-weight: 100;
   color: #878787;
-  width: 50%;
+  width: 70%;
   padding-bottom: 10px;
+  font-family: 'Taviraj', serif;
 }
 .experience-description {
   font-size: 20px;
   font-weight: 200;
   color: #878787;
-  width: 50%;
+  width: 70%;
   padding-bottom: 25px;
+  font-family: 'Poppins', sans-serif;
 }
 
 .wordrive {
@@ -269,7 +277,7 @@ footer {
 .wordrive-img {
   flex: 50%;
   text-align: center;
-  padding-left: 14%;
+  margin-left: 40px;
 }
 .wordrive-text {
   flex: 50%;
@@ -280,10 +288,11 @@ footer {
 
 }
 .uiexp1 {
-  width: 80%;
+  width: 68%;
   min-width: 250px;
   height: auto;
   margin: auto;
+  padding-right: 20px;
 
 }
 .wordrive-button {
@@ -302,6 +311,7 @@ footer {
 .zoom-img {
   flex: 50%;
   text-align: center;
+  padding-right: 35px;
 }
 .zoom-text {
   flex: 50%;
@@ -309,7 +319,6 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-
 }
 .uiexp2 {
   width: 90%;
@@ -326,6 +335,27 @@ footer {
   border-radius: 10px;
   max-width: 150px;
 }
+.dxd-img {
+  flex: 50%;
+  text-align: center;
+  margin-left: 25px;
+}
+.dxd-text {
+  flex: 50%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.uiexp3 {
+  width: 58%;
+  min-width: 250px;
+  height: auto;
+  margin: auto;
+}
+#dxd {
+  padding-top: 20px;
+}
 
 .dormit-img {
   flex: 50%;
@@ -337,8 +367,9 @@ footer {
   min-width: 250px;
   height: auto;
   margin: auto;
-
 }
+
+
 #highlight {
   color: #BA9369;
 }
@@ -414,7 +445,7 @@ span.active{
 }
 
 #investigation-text p{
-  font: Poppins;
+  font-family: 'Poppins', sans-serif;
   font-size: 65px;
   font-weight: 100;
   color: #878787;
@@ -426,7 +457,7 @@ span.active{
 }
 
 #investigation-text b{
-  font: Poppins;
+  font-family: 'Poppins', sans-serif;
   font-size: 65px;
   font-weight: 400;
   color: #878787;
@@ -459,7 +490,7 @@ span.active{
 }
 
 #oli-text p{
-  font: Poppins;
+  font-family: 'Poppins', sans-serif;
   font-size: 175px;
   font-weight: 500;
   color: #878787;
@@ -484,7 +515,7 @@ span.active{
 }
 
 #surreal-text1 p{
-  font: Poppins;
+  font-family: 'Poppins', sans-serif;
   font-size: 65px;
   font-weight: 500;
   color: #878787;
@@ -494,7 +525,7 @@ span.active{
 }
 
 #surreal-text2 p{
-  font: Poppins;
+  font-family: 'Poppins', sans-serif;
   font-size: 65px;
   font-weight: 500;
   color: #878787;
@@ -521,7 +552,7 @@ span.active{
 }
 
 #procreate-text p{
-  font: Poppins;
+  font-family: 'Poppins', sans-serif;
   font-size: 65px;
   font-weight: 500;
   color: #878787;
@@ -549,7 +580,7 @@ span.active{
 }
 
 #multi-text p{
-  font: Poppins;
+  font-family: 'Poppins', sans-serif;
   font-size: 65px;
   font-weight: 500;
   color: #878787;
@@ -577,12 +608,14 @@ span.active{
   font-size: 40px;
   color: #878787;
   font-weight: 300;
+  font-family: 'Poppins', sans-serif;
 }
 
 #vis41 b {
   font-size: 40px;
   color: #878787;
   font-weight: 500;
+  font-family: 'Poppins', sans-serif;
 }
 
 #vis41-title {
@@ -715,12 +748,14 @@ span.active{
   font-size: 40px;
   color: #878787;
   font-weight: 300;
+  font-family: 'Poppins', sans-serif;
 }
 
 #vis80 b {
   font-size: 40px;
   color: #878787;
   font-weight: 500;
+
 }
 
 #vis80 .top-row {
@@ -758,12 +793,14 @@ span.active{
   color: #878787;
   font-weight: 300;
   padding-left: 30px;
+  font-family: 'Poppins', sans-serif;
 }
 
 #dsgn1 b {
   font-size: 40px;
   color: #878787;
   font-weight: 500;
+  font-family: 'Poppins', sans-serif;
 }
 
 .play-sections>div  {
