--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,14 @@ header{
   color: #EBA937;
 }
 
+#work-nav ul li .work-nav {
+  color: #EBA937;
+}
+
+#play-nav ul li .play-nav {
+  color: #BD295F;
+}
+
 footer {
   padding-bottom: 50px;
   padding-top: 50px;
@@ -141,6 +149,11 @@ footer {
   line-height: 1;
   font-weight: 300;
   font-family: 'Taviraj', serif;
+}
+
+.home-text span {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .home-text h5{
   margin: 15px 0px 25px 24px;
@@ -243,7 +256,7 @@ footer {
 }
 .exp {
   display: flex;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
 }
 .experience-company {
   font-size: 30px;
@@ -263,7 +276,7 @@ footer {
 }
 .experience-description {
   font-size: 20px;
-  font-weight: 200;
+  font-weight: 400;
   color: #878787;
   width: 70%;
   padding-bottom: 25px;
@@ -277,14 +290,16 @@ footer {
 .wordrive-img {
   flex: 50%;
   text-align: center;
-  margin-left: 40px;
+  margin-left: 44px;
 }
 .wordrive-text {
   flex: 50%;
+  width: 50%;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-right: 40px;
 
 }
 .uiexp1 {
@@ -309,12 +324,12 @@ footer {
 }
 
 .zoom-img {
-  flex: 50%;
+  width:50%;
   text-align: center;
   padding-right: 35px;
 }
 .zoom-text {
-  flex: 50%;
+  width:50%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -328,7 +343,7 @@ footer {
 
 }
 .zoom-button {
-  background-color: #D4CBF7;
+  background-color: #6DC2EF;
   color: white;
   padding: 5px 3px;
   border: none;
@@ -341,7 +356,7 @@ footer {
   margin-left: 25px;
 }
 .dxd-text {
-  flex: 50%;
+  width: 50%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -356,19 +371,109 @@ footer {
 #dxd {
   padding-top: 20px;
 }
-
+.dxd-button {
+  background-color: #D9D1D9;
+  color: white;
+  padding: 5px 3px;
+  border: none;
+  border-radius: 10px;
+  max-width: 150px;
+}
+.dormit-text {
+  width: 50%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .dormit-img {
-  flex: 50%;
+  width: 50%;
   text-align: center;
-  padding-left: 14%;
 }
 .visexp1 {
-  width: 80%;
+  width: 65%;
+  height: auto;
+
+}
+.dormit-button {
+  background-color: #D9D1D9;
+  color: white;
+  padding: 5px 3px;
+  border: none;
+  border-radius: 10px;
+  max-width: 150px;
+}
+
+.aisc {
+  display: flex;
+  align-items: center;
+}
+
+.aisc-img {
+  width:50%;
+  text-align: center;
+  padding-right: 40px;
+}
+.aisc-text {
+  width:50%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.visexp2 {
+  width: 60%;
   min-width: 250px;
   height: auto;
   margin: auto;
+
+}
+.aisc-button {
+  background-color: #D9D1D9;
+  color: white;
+  padding: 5px 3px;
+  border: none;
+  border-radius: 10px;
+  max-width: 150px;
 }
 
+#clickable:hover {
+  transform:scale(1.1,1.1);
+  -webkit-transform:scale(1.1,1.1);
+  -moz-transform:scale(1.1,1.1);
+}
+
+.sacf {
+  display: flex;
+  align-items: center;
+}
+
+.sacf-img {
+  width:50%;
+  text-align: center;
+  padding-left: 15px;
+}
+.sacf-text {
+  width:50%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.visexp3 {
+  width: 66%;
+  height: auto;
+  margin: auto;
+
+}
+.sacf-button {
+  background-color: #D9D1D9;
+  color: white;
+  padding: 5px 3px;
+  border: none;
+  border-radius: 10px;
+  max-width: 150px;
+}
 
 #highlight {
   color: #BA9369;
@@ -404,12 +509,16 @@ footer {
   margin-bottom: 75px;
 }
 .play-nav-text {
-  font-size: 27px;
+  font-size: 22px;
   font-weight: 400;
   color: #C0C0C0;
+  font-family: Poppins;
+  letter-spacing: 3px;
 }
 span.active{
   color: #505050;
+  font-family: Taviraj;
+  font-style: italic;
 }
 
 .play-display {
@@ -438,7 +547,7 @@ span.active{
 .investigation-img{
   min-height: 50px;
   min-width: 50px;
-  width: 20%;
+  width: 90%;
   padding-top: 15px;
   padding-bottom: 15px;
   object-fit: cover;
