--- a/css/zoom-style.css
+++ b/css/zoom-style.css
@@ -21,11 +21,9 @@ header{
   align-items: center;
   justify-content: space-between;
   background: #FFFDF9;
-  padding: 2.5%;
+  padding: 1%;
   transition: .3s;
   box-shadow: 0px 0px 10px rgb(0 0 0 /10%);
-  margin-bottom: 80px;
-  font-family: Poppins;
 }
 .work-nav:hover {
   color: #EBA937;
@@ -42,8 +40,9 @@ header{
 
 .logo img{
   max-width: 100%;
-  width:50px;
+  width:40px;
   height: auto;
+  margin-left: 50px;
 }
 
 .navbar {
@@ -64,6 +63,7 @@ header{
   -1px 1px 0 #000,
   1px 1px 0 #000;
   letter-spacing: .1rem;
+  font-family: 'Poppins', sans-serif;
 }
 .navbar a::after{
   content: '';
@@ -96,6 +96,13 @@ header{
   color: #EBA937;
 }
 
+#work-nav ul li .work-nav {
+  color: #EBA937;
+}
+
+#play-nav ul li .play-nav {
+  color: #BD295F;
+}
 footer {
   padding-bottom: 50px;
   text-align: center;
@@ -105,6 +112,8 @@ footer {
 .footer-chat {
   font-size: 22px;
   font-weight: 500;
+  color: #C77492;
+  font-family: Poppins;
 }
 .footer-name {
   font-size: 17px;
@@ -139,7 +148,7 @@ footer {
 
 #title {
   padding-top: 50px;
-  font: Taviraj;
+  font-family: "Taviraj", serif;
   font-size: 100px;
   font-weight: 500;
   color: white;
@@ -204,7 +213,7 @@ footer {
 }
 .case-study b {
   font-weight: 500;
-  color: #558CF6;
+  color: #7ACAF5;
 }
 .case-study p {
   font-family: Poppins;
@@ -423,3 +432,6 @@ footer {
   padding-left: 20px;
   padding-right: 20px;
 }
+ video {
+   padding-bottom: 30px;
+ }
