--- a/css/zoom-style.css
+++ b/css/zoom-style.css
@@ -213,7 +213,7 @@ footer {
 }
 .case-study b {
   font-weight: 500;
-  color: #7ACAF5;
+  color: #6CCAFF;
 }
 .case-study p {
   font-family: Poppins;
