--- a/css/wordrive-style.css
+++ b/css/wordrive-style.css
@@ -156,8 +156,10 @@ footer {
 /* Case study styles */
 #title-banner {
   margin-top: 60px;
-  background: rgb(152,141,194);
-  background: linear-gradient(90deg, rgba(152,141,194,1) 0%, rgba(152,141,194,1) 0%, rgba(212,203,247,1) 35%, rgba(192,229,174,1) 82%, rgba(251,233,172,1) 100%);
+  background-image: url("../img/wordrive/wordrive-background.png");
+  background-size: 100% 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 
