--- a/css/wordrive-style.css
+++ b/css/wordrive-style.css
@@ -162,8 +162,6 @@ footer {
   height: auto;
 }
 
-
-
 .title-text {
   padding-left: 50px;
   width:45%;
@@ -179,11 +177,11 @@ footer {
 }
 
 #title-banner h3 {
-  padding-top: 20px;
   font-family: "Poppins", sans-serif;
   font-size: 25px;
   font-weight: 400;
   color: white;
+  padding-bottom: 10px;
 }
 
 #title-banner h4 {
