--- a/css/wordrive-style.css
+++ b/css/wordrive-style.css
@@ -200,8 +200,8 @@ footer {
   color: white;
 }
 .main-body {
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 12%;
+  padding-right: 12%;
 }
 .main-body h1 {
   padding-bottom: 35px;
