--- a/css/gallery-style.scss
+++ b/css/gallery-style.scss
@@ -34,23 +34,61 @@ button {
   align-content: space-evenly;
 }
 
-.project {
+#oli-grid {
+  width: 65%;
+  min-height: 40vh;
+  background: $background;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(200px, .3fr));
+  grid-template-rows: 250px 250px;
+  justify-content: space-evenly;
+  align-content: space-evenly;
+  border: solid blue;
+}
+
+#surreal-grid {
+  width: 75%;
+  min-height: 40vh;
+  background: $background;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(200px, .3fr));
+  grid-template-rows: 200px 200px 200px; 
+  justify-content: space-evenly;
+  align-content: space-evenly;
+  border: solid blue;
+  z-index: 2 !important;
+}
+
+#procreate-grid {
+  width: 75%;
+  min-height: 40vh;
+  background: $background;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(200px, .3fr));
+  grid-template-rows: 200px 200px 200px 200px 200px 200px;
+  justify-content: space-evenly;
+  align-content: space-evenly;
+  border: solid blue;
+}
+
+.thumbnail {
   position: relative;
   display: flex;
   overflow: hidden;
   justify-content: center;
   align-items: center;
+  border: solid red;
   img {
     position: absolute;
     font-size: 0;
     // opacity: .9;
     // TODO: figure out positioning of image within thumbnail div
-    width: 250px;
-    height: 250px;
+    
     justify-content: center;
     overflow: hidden;
-    // margin-bottom: 10px;
-    // margin-top: 10px;
     margin-left: 20px;
   }
   p {
@@ -75,10 +113,14 @@ button {
     color: $dark;
     letter-spacing: 2px;
   }
+  .standard {
+    width: 250px;
+    height: 250px;
+  }
 }
 
 // project hover overlay
-.project:hover .grid__overlay {
+.thumbnail:hover .grid__overlay {
   transform: translateY(0%);
 }
 
@@ -154,7 +196,7 @@ button {
   }
 }
 
-.project__image {
+.thumbnail__image {
   margin-left: -50%;
 }
 
@@ -187,4 +229,13 @@ button {
 .expanded-img {
   height: 70vh;
   width: 70vh;
+}
+
+.hide {
+  z-index: -50 !important;
+}
+
+.procreate-top {
+  height: 80px;
+  width: 850px;
 }
