--- a/css/styles.css
+++ b/css/styles.css
@@ -675,7 +675,7 @@ span.active{
 }
 
 .surreal-column {
-  flex: 25%;
+  /* flex: 25%; */
 }
 
 .surreal-img{
@@ -711,6 +711,7 @@ span.active{
 
 #surreal-text2 {
   white-space: nowrap;
+  position: relative;
 }
 #surreal-text2 p{
   font-family: 'Poppins', sans-serif;
@@ -720,15 +721,34 @@ span.active{
   padding-left: 45%;
   padding-top: 100px;
   letter-spacing: 10px;
+  overflow: visible;
+  margin-bottom: 80px;
+  z-index: 3 !important;
+  position: relative;
 }
+
+/* #procreate {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: space-evenly;
+} */
 
 .procreate {
   display: flex;
   flex-shrink: 0;
   padding: 0 4px 4px 50px;
 }
+
+/* .procreate-top {
+  height: 100px;
+  width: 300px !important;
+} */
+
 #procreate-top {
-  max-width: 800px;
+  /* max-width: 800px; */
+  max-width: 100%;
+  max-height: 100%;
   padding-left: 40px;
 }
 .procreate-column {
