--- a/css/gallery-style.scss
+++ b/css/gallery-style.scss
@@ -1,8 +1,4 @@
-// TODO: change font
-@import url('https://fonts.googleapis.com/css?family=Inconsolata|Merriweather');
-
 $body: 'Poppins', sans-serif;
-$big: 'Merriweather', serif;
 
 $white: #ffffff;
 $primary: #F2DAD7;
@@ -28,13 +24,14 @@ button {
   background: $background;
   position: relative;
   display: grid;
-  grid-template-columns: repeat(3, minmax(200px, .3fr));
+  grid-template-columns: repeat(3, 250px);
   grid-template-rows: 250px 250px 250px;
-  justify-content: space-evenly;
-  align-content: space-evenly;
+  grid-row-gap: 30px;
+  column-gap: 15vh;
 }
 
 #oli-grid {
+  margin-left: 50px;
   width: 65%;
   min-height: 40vh;
   background: $background;
@@ -42,9 +39,9 @@ button {
   display: grid;
   grid-template-columns: repeat(3, minmax(200px, .3fr));
   grid-template-rows: 250px 250px;
-  justify-content: space-evenly;
-  align-content: space-evenly;
-  border: solid blue;
+  // border: solid blue;
+  grid-row-gap: 30px;
+  column-gap: 30px;
 }
 
 #surreal-grid {
@@ -53,12 +50,14 @@ button {
   background: $background;
   position: relative;
   display: grid;
-  grid-template-columns: repeat(3, minmax(200px, .3fr));
-  grid-template-rows: 200px 200px 200px; 
+  grid-template-columns: repeat(3, 250px);
+  grid-template-rows: repeat(3, 220px); 
   justify-content: space-evenly;
   align-content: space-evenly;
-  border: solid blue;
+  // border: solid blue;
   z-index: 2 !important;
+  grid-row-gap: 30px;
+  column-gap: 15vh;
 }
 
 #procreate-grid {
@@ -67,11 +66,50 @@ button {
   background: $background;
   position: relative;
   display: grid;
-  grid-template-columns: repeat(3, minmax(200px, .3fr));
-  grid-template-rows: 200px 200px 200px 200px 200px 200px;
-  justify-content: space-evenly;
-  align-content: space-evenly;
-  border: solid blue;
+  grid-template-columns: repeat(3, 250px);
+  grid-template-rows: repeat(6, 220px);
+  // border: solid blue;
+  grid-row-gap: 30px;
+  column-gap: 15vh;
+}
+
+#multi-grid {
+  width: 60%;
+  min-height: 40vh;
+  background: $background;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 250px);
+  grid-template-rows: repeat(3, 220px);
+  // border: solid blue;
+  grid-row-gap: 30px;
+  column-gap: 15px;
+}
+
+#nineteen-grid {
+  width: 60%;
+  min-height: 40vh;
+  background: $background;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 250px);
+  grid-template-rows: repeat(6, 250px);
+  // border: solid blue;
+  grid-row-gap: 8px;
+  column-gap: 15px;
+}
+
+#fifteen-grid {
+  width: 80%;
+  min-height: 40vh;
+  background: $background;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 230px);
+  grid-template-rows: repeat(5, 230px);
+  // border: solid blue;
+  grid-row-gap: 20px;
+  column-gap: 20vh;
 }
 
 .thumbnail {
@@ -80,16 +118,14 @@ button {
   overflow: hidden;
   justify-content: center;
   align-items: center;
-  border: solid red;
+  // border: solid red;
   img {
-    position: absolute;
+    // position: absolute;
     font-size: 0;
-    // opacity: .9;
-    // TODO: figure out positioning of image within thumbnail div
-    
+    // opacity: .9;    
     justify-content: center;
     overflow: hidden;
-    margin-left: 20px;
+    padding: 0;
   }
   p {
     position: absolute;
@@ -162,7 +198,6 @@ button {
   right: 0;
   bottom: 0;
   left: 0;
-  display: none;
   z-index: 3;
 }
 .overlay.open {
@@ -174,9 +209,12 @@ button {
 
 .overlay__inner {
   background: $white;
-  width: 700px;
   padding: 20px;
+  margin-top: 10vh;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   opacity: 1;
   z-index: 4;
 }
@@ -197,38 +235,68 @@ button {
 }
 
 .thumbnail__image {
-  margin-left: -50%;
+  // margin-left: -50%;
+  height: 100% !important;
+  width: 100% !important;
 }
 
 .arrow-right {
-  height: 130px;
-  width: 80px;
+  position: absolute;
+  height: 500px;
+  width: 120px;
+
+  // TODO: change
   background-color: red;
   margin: 30px;
+  z-index: 50;
+  left: 100%;
+  opacity: .7;
+}
+
+.arrow-right:hover {
+  // TODO: change
+  background-color: black;
+  cursor: pointer;
+
 }
 
 .arrow-left {
-  height: 130px;
-  width: 80px;
+  position: absolute;
+  height: 500px;
+  width: 120px;
   background-color: red;
   margin: 30px;
+  z-index: 50;
+  right: 100%;
+  opacity: .7;
 }
 
+.arrow-left:hover {
+  background-color: black;
+  cursor: pointer;
+}
+
+
 .flex-container {
+  // position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 65vh;
+  min-width: 100px;
 }
 
 .img-with-caption {
+  max-height: 85vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  // width: 100vh;
 }
 
 .expanded-img {
-  height: 70vh;
-  width: 70vh;
+  height: 100%;
+  width: 100%;
 }
 
 .hide {
@@ -236,6 +304,43 @@ button {
 }
 
 .procreate-top {
-  height: 80px;
-  width: 850px;
+  height: 170px !important;
+  width: 800px !important;
+  margin: 0px 20px 20px 20px;
+}
+
+.print {
+  height: 150px;
+  width: 115px;
+  margin: 10px;
+}
+
+.denotative-main-img {
+  // max-width: 330px;
+  width:100%;
+}
+
+.image-making-main {
+  margin: 30px 20px 0px 50px;
+  max-width: 300px;
+  max-height: 400px;
+}
+
+.image-main-img {
+  width:100%;
+}
+
+.studio-top {
+  margin: 10px 20px 10px 0px;
+  max-width: 230px;
+}
+
+.studio {
+  width: 215;
+  margin: 10px 20px 10px 0px;
+}
+
+.stuff {
+  display: flex;
+  justify-content: start;
 }
