--- a/css/gallery-style.css
+++ b/css/gallery-style.css
@@ -182,7 +182,7 @@ button {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 3;
+  z-index: 4 !important;
 }
 
 .overlay.open {
@@ -201,7 +201,7 @@ button {
   justify-content: center;
   align-items: center;
   opacity: 1;
-  z-index: 4;
+  z-index: 4 !important;
 }
 
 .close {
@@ -246,7 +246,7 @@ button {
   width: 120px;
   background-color: red;
   margin: 30px;
-  z-index: 50;
+  z-index: 50 !important;
   right: 100%;
   opacity: 0.7;
 }
@@ -262,6 +262,7 @@ button {
   align-items: center;
   width: 65vh;
   min-width: 100px;
+  z-index: 4 !important;
 }
 
 .img-with-caption {
