--- a/css/gallery-style.scss
+++ b/css/gallery-style.scss
@@ -198,7 +198,7 @@ button {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 3;
+  z-index: 4 !important;
 }
 .overlay.open {
   display: grid;
@@ -216,7 +216,7 @@ button {
   justify-content: center;
   align-items: center;
   opacity: 1;
-  z-index: 4;
+  z-index: 4 !important;
 }
 
 .close {
@@ -266,7 +266,7 @@ button {
   width: 120px;
   background-color: red;
   margin: 30px;
-  z-index: 50;
+  z-index: 50 !important;
   right: 100%;
   opacity: .7;
 }
@@ -284,6 +284,7 @@ button {
   align-items: center;
   width: 65vh;
   min-width: 100px;
+  z-index: 4 !important;
 }
 
 .img-with-caption {
