--- a/css/styles.css
+++ b/css/styles.css
@@ -723,8 +723,8 @@ span.active{
   letter-spacing: 10px;
   overflow: visible;
   margin-bottom: 80px;
-  z-index: 3 !important;
   position: relative;
+  z-index: 3;
 }
 
 /* #procreate {
