--- a/css/styles.css
+++ b/css/styles.css
@@ -418,6 +418,74 @@ footer {
   border-radius: 10px;
   max-width: 150px;
 }
+
+.ethics-img {
+  flex: 50%;
+  text-align: center;
+  margin-left: 20px;
+}
+.ethics-text {
+  width: 50%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.uiexp4 {
+  width: 57%;
+  min-width: 250px;
+  height: auto;
+  margin: auto;
+}
+#ethics {
+  padding-top: 20px;
+}
+.ethics-button {
+  background-color: #D1E0A4;
+  color: white;
+  padding: 5px 3px;
+  border: none;
+  border-radius: 10px;
+  max-width: 150px;
+}
+.ethics-button:hover {
+  background-color: #59CAA1;
+}
+
+.sleep-img {
+  flex: 50%;
+  text-align: center;
+  margin-left: 20px;
+}
+.sleep-text {
+  width: 50%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.uiexp5 {
+  width: 67%;
+  min-width: 250px;
+  height: auto;
+  margin: auto;
+}
+#sleep {
+  padding-top: 20px;
+}
+.sleep-button {
+  background-color: #CABBED;
+  color: white;
+  padding: 5px 3px;
+  border: none;
+  border-radius: 10px;
+  max-width: 150px;
+}
+
+.sleep-button:hover {
+  background-color: #9175CF;
+}
+
 .dormit-text {
   width: 50%;
   position: relative;
